--- a/luckystyles.css
+++ b/luckystyles.css
@@ -34,7 +34,7 @@ body {
 	font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 	line-height: 1.42857143;
 	color: rgb(1, 19, 3); 
-	background-color: hotpink;
+	background-color: whitesmoke;
 }
 
 .wrap {
@@ -56,7 +56,7 @@ h1, h2 {
     font-size: 30px;
     color:white;
     border: 5px solid black;
-    background-color: black;
+    background-color: rgb(107, 235, 75);
     margin: 0;
 }
 
