--- a/luckystyles.css
+++ b/luckystyles.css
@@ -4,11 +4,7 @@
 	GENERIC STYLES
 ==========================================================
     COLOR PALETTE
-    DARK GREEN:  #003333
-    TURQUOISE:   #99FFCC
-    NAV HOV: rgb(16, 243, 167) / #10F3A7
-    SHADOWS: 0 0 3px #00ff80, 0 0 5px #003333;
-    LIGHTEST TURQUOISE: #bbfce0
+    BRIGHT GREEN:  rgb(107, 235, 75)
 ========================================================*/
 @-ms-viewport {
     width: extend-to-zoom;
@@ -34,7 +30,8 @@ body {
 	font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 	line-height: 1.42857143;
 	color: rgb(1, 19, 3); 
-	background-color: whitesmoke;
+    background-color: whitesmoke;
+    background: url(./images/tape.jpg);
 }
 
 .wrap {
@@ -55,7 +52,7 @@ h1, h2 {
     font-weight: 900;
     font-size: 30px;
     color:white;
-    border: 5px solid black;
+    /* border: 5px solid black; */
     background-color: rgb(107, 235, 75);
     margin: 0;
 }
@@ -104,7 +101,7 @@ h2 {
 }
 
 .navbar a:hover {
-    background-color: darkmagenta;
+    background-color: rgb(107, 235, 75);
     color: white;
 }
 
@@ -128,6 +125,13 @@ h2 {
         width: calc(100vw-100px);
         background-size: cover;
         background-position: center;
+        -webkit-background-size: cover;
+        -moz-background-size: cover;
+        -o-background-size: cover;
+        background-size: cover;
+        width: 100%;
+        display: block;
+        height: auto;
     }
 
 /*========================================================================
@@ -138,6 +142,14 @@ h2 {
     padding-top: 0px;
     background: url(./images/outside.jpg) no-repeat;
     background-attachment: fixed;
+    background-position: center;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
+    width: 100%;
+    display: block;
+    height: auto;
 }
 
 
@@ -291,16 +303,6 @@ iframe {
         padding: 10% 6px 0;
         float: left;
        width: 33.23333%;
-    }
-
-    #drop {
-        -webkit-background-size: cover;
-        -moz-background-size: cover;
-        -o-background-size: cover;
-        background-size: cover;
-        width: 100%;
-        display: block;
-        height: auto;
     }
 
     .vroom {
