--- a/luckystyles.css
+++ b/luckystyles.css
@@ -205,20 +205,14 @@ div.description {
 }
 
 /*========================================================================
-                                ABOUT ME
+                                SHOP
 =======================================================================*/
 
 
-#aboutme {
-    background-color: whitesmoke;
-}
 
 /*========================================================================
-                                RESUME
+                                WATCH
 =======================================================================*/
-#resume {
-    background-color: #6be8aa;
-}
 
 iframe {
     width: 100%;
@@ -238,7 +232,7 @@ iframe {
     }
 
     .navbar a {
-        float: left;
+        float: right;
         padding: 14px 16px;
         font-size: 17px;
     }
@@ -253,14 +247,9 @@ iframe {
 
     h1, h2 {
         font-size: 40px;
-        color: #003333;
+        color: whitesmoke;
         border: none;
         background-color: transparent;
-    }
-
-    h2 {
-        font-size: 20px;
-        padding-top: 5px;
     }
 
     .frog, .dan {
@@ -268,13 +257,12 @@ iframe {
     }
 
     /*========================================================================
-                                RESUME
+                                LOOK
     =======================================================================*/
     iframe {
         margin-top: 5%;
     }
 }
-
 
 
 
@@ -326,10 +314,6 @@ iframe {
        width: 33.23333%;
     }
 
-    .vroom {
-        width: 100%;
-        height: 100%;
-    }
 
     .library, .spiders, .github, .linkdin, .mail, .vroom {
         height: 100px;
@@ -345,15 +329,4 @@ iframe {
         width: 40vw;
     }
 
-    .library, .spiders, .github, .linkdin {
-        width: 100px;
-    }
-
-    .vroom {
-        width: 212px;
-    }
-
-    .mail {
-        width: 150px;
-    }
 }
