--- a/luckystyles.css
+++ b/luckystyles.css
@@ -26,13 +26,15 @@ html {
 
 body {
 	font-size: 18px;
-	margin: 0;
+    margin: 0;
+    padding: 0;
 	font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 	line-height: 1.42857143;
 	color: rgb(1, 19, 3); 
     background-color: whitesmoke;
     background: url(./images/tape.jpg);
 }
+
 
 .wrap {
     height: 100%;
@@ -93,7 +95,7 @@ h2 {
 }
 
 .navbar a {
-    color: black;
+    color:whitesmoke;
     text-align: center;
     padding: 16px 7px;
     text-decoration: none;
@@ -132,10 +134,12 @@ h2 {
         width: 100%;
         display: block;
         height: auto;
+        top: 0;
     }
 
 .logo {
     position: center;
+    justify-content: center;
     width: 90vw;
 }
 
@@ -157,11 +161,10 @@ h2 {
     height: auto;
 }
 
-
-
-div.description {
+.drop .description {
     padding: 15px;
     text-align: center;
+    color: black;
 }
 
 .frog {
@@ -171,29 +174,6 @@ div.description {
 .dan {
     width: 90vw;
 }
-
-.library, .spiders, .github, .linkdin {
-    width: 50%;
-    height: 50%;
-}
-
-.mail {
-    width: 75%;
-    height: 75%;
-}
-
-.library, .spiders, .github, .linkdin, .mail, .vroom {
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
-}
-
-.vroom {
-    width: 90%;
-    height: 90%;
-}
-
-
 
 * {
     box-sizing: border-box;
@@ -208,7 +188,9 @@ div.description {
                                 SHOP
 =======================================================================*/
 
-
+.description {
+    color: whitesmoke;
+}
 
 /*========================================================================
                                 WATCH
@@ -246,7 +228,7 @@ iframe {
     }
 
     h1, h2 {
-        font-size: 40px;
+        font-size: 30px;
         color: whitesmoke;
         border: none;
         background-color: transparent;
@@ -254,6 +236,10 @@ iframe {
 
     .frog, .dan {
         width: auto;
+    }
+
+    .media {
+    justify-items: center;
     }
 
     /*========================================================================
@@ -281,11 +267,8 @@ iframe {
         -moz-background-size: cover;
         -o-background-size: cover;
         background-size: cover;
-        width: 100%;
         display: block;
-        height: auto;
-        padding-top: 350px; /* space before main title logo */
-        padding-bottom: 500px; /* space after */
+        height: 100vh;
     }
 
     .logo {
@@ -298,9 +281,16 @@ iframe {
     .container {
         padding: 5% 23%;
     }
+    .home-container {
+        padding-top: 0%;
+    }
 
     h1, h2 {
         text-align: left;
+    }
+
+    .navbar a {
+        font-size: 20px;
     }
 
     /*========================================================================
@@ -315,9 +305,6 @@ iframe {
     }
 
 
-    .library, .spiders, .github, .linkdin, .mail, .vroom {
-        height: 100px;
-    }
 }
 
 
